@@ -2,6 +2,10 @@
 
 WebAuth 3.1.2 (in progress)
 
+ *) Expanded the libgcc linking hack to apply to all of the module builds
+    rather than just the cURL link flags, since it showed up on Solaris 7
+    affecting mod_webauthldap as well.
+
  *) Fixed the installation rule for the test suite to properly honor
     DESTDIR.
 
